# attention_manager_msgs

./: CHANGELOG.rst  CMakeLists.txt  package.xml
srv/: SetPolicy.srv
