<?xml version="1.0"?>
<package format="3">
  <name>attention_manager_msgs</name>
  <version>0.3.1</version>
  <description>The attention_manager package implements the logic deciding where the robot should look</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>Proprietary</license>

  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
